# llm-d-benchmark

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .version.json  1  BASH_TO_PYTHON_CONVERSION.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.cross  Makefile  README.md  experiment_run.txt  go.mod  install.sh  pyproject.toml  run.sh
.claude/agents/: llm-d-gaie-deployer.md  llm-d-gateway-deployer.md  llm-d-httproute-deployer.md  llm-d-modelservice-deployer.md  llm-d-orchestrator.md  llm-d-teardown.md
.claude/skills/: convert-guide.md  refine-mappings.md
.github/workflows/: auto-assign.yaml  benchmark1.yaml  ci-config-explorer-run.yaml  ci-nighly-benchmark-gke.yaml  ci-nighly-benchmark-ocp.yaml  ci-nightly-benchmark-build-image.yaml  ci-nightly-benchmark-cks-fma.yaml  ci-nightly-benchmark-cks-modelservice.yaml  ci-nightly-benchmark-cks-standalone.yaml  ci-nightly-benchmark-cks.yaml  ci-nightly-benchmark-gke-fma.yaml  ci-nightly-benchmark-gke-modelservice.yaml  ci-nightly-benchmark-gke-standalone.yaml  (+22 more)
.tekton/: pipelinerun.yaml
_experiments/: inference-scheduling.yaml  pd-disaggregation.yaml  precise-prefix-cache-aware.yaml  rules.txt
_templates/: defaults.yaml  gateway-api-inference-extension.yaml  modelservice.yaml  rules.md  standalone.yaml
analysis/: analysis.ipynb  analysis_inference_scheduler.ipynb  benchmark_report.py  benchmark_report_v0_1.py  benchmark_report_v0_2.py  inference-perf-analyze_results.sh  sweep_configuration_analysis.ipynb  sweep_deployer_configuration_analysis.ipynb  sweep_standalone_configuration_analysis.ipynb
benchmark_report/: Makefile  README.md  __init__.py  _pyproject.toml  base.py  br_v0_2_example.yaml  cli.py  convert.py  core.py  integrate_metrics.py  metrics_processor.py  native_to_br.py  native_to_br0_1.py  native_to_br0_2.py  prometheus_metrics.py  schema_v0_1.py  schema_v0_2.py  schema_v0_2_components.py
config/: README.md
config-explorer/: Home.py  README.md  db.py  requirements.txt  util.py
config-rec/: Home.py  README.md  db.py  df.pkl  main.py  requirements.txt  to_delete.py  util.py
config_explorer/: Capacity_Planner.py  Home.py  README.md  db.py  df.pkl  empirical-vllm-memory-results.md  gpu_costs.json  pyproject.toml  requirements.txt  util.py
docs/: analysis.md  benchmark_report.md  developer-guide.md  doe.md  eval-containers-harness.md  existing_stack.md  guide-converter-mappings.md  guide-converter.md  kustomize.md  lifecycle.md  metrics_collection.md  multi-variant-benchmark.md  observability.md  quickstart.md  run.md  standup.md  upstream-versions.md  workload-variant-autoscaler.md
existing_stack/: config.yaml  config_template.yaml  functions.sh  run_epp_scale.sh  run_only.sh
experiments/: epp-scale-limits.yaml  inference-scheduler.yaml  inference-scheduling-2.yaml  inference-scheduling-guidellm.yaml  inference-scheduling.yaml  max-concurrency-sweep.yaml  optimized-baseline.yaml  otel-session-rate-sweep.yaml  pd-disaggregation-guidellm.yaml  pd-disaggregation.yaml  precise-prefix-cache-aware-blog.yaml  precise-prefix-cache-aware.yaml  tiered-prefix-cache.yaml
hello/: hello_test.go
kubecon2025/: README.md  pd-disaggregation-scenario.sh
llm_d_benchmark/: __init__.py
llm_d_stack_discovery/: requirements.txt
llmdbenchmark/: README.md  __init__.py  cli.py  config.py
llmdbenchmark-schema/: README.md  pyproject.toml
llmdbenchmark-schema/llmdbenchmark_schema/: __init__.py
plotting-scripts/: plot_benchmark_metrics.py
quickstart-existing-stack-benchmark/: README.md  quickstart-config.md  run_example.md
quickstart-k8s/: Compare-README.md  README.md
scenarios/: aiu.sh  inference-scheduling.yaml  kind_modelservice_inference-sim.sh  kubernetes_H200_modelservice_llama-8b.sh  ocp_A100_deployer_llama-3b.sh  ocp_A100_modelservice_llama-3b.sh  ocp_A100_standalone_llama-3b.sh  ocp_H100MIG_modelservice_llama-8b.sh  ocp_H100_deployer_PD.sh  ocp_H100_deployer_PD_base.sh  ocp_H100_standalone_base.sh  ocp_H200_deployer_PD.sh  ocp_H200_deployer_PD_base.sh  ocp_H200_standalone.sh  ocp_H200_standalone_base.sh  ocp_modelservice_inference-sim.sh  ocp_modelservice_llama-70b_precise-prefix-cache-aware.sh  pd-disaggregation.yaml  precise-prefix-cache-aware.yaml  prefix-cache-aware.yaml  tiered-prefix-cache.yaml  wide-ep-lws.yaml  wide-ep-small.sh  wide-ep.sh
scripts/: README-ferrite-matrix.md  generate-ferrite-matrix.py  run-ferrite-matrix.sh  setup_clients.sh
setup/: convert_guides.sh  e2e.py  e2e.sh  env.sh  functions.py  functions.sh  install_deps.sh  non_admin_env.sh  run.sh  run_wizard.sh  s390x-setup.sh  standup.sh  sweep.sh  sweep_configurations.sh  sweep_deployer_configurations.sh  sweep_standalone_configurations.sh  teardown.sh
specification/: README.md  example-specification.yaml.j2  inference-scheduling.yaml.j2  pd-disaggregation.yaml.j2
tekton-poc/: README.md
tektonc/: README.md  operations.md  requirements.txt  tasks.md  tektonc.py
templates/: template.j2
tests/: README.md  test_apply_overrides_warning.py  test_benchmark_report_v0_2_1_compat.py  test_benchmark_report_v0_2_1_multimodal.py  test_cluster_resource_resolver.py  test_config_schema.py  test_config_variable_substitution.py  test_crane_pin_sync.py  test_dpc_log_parser.py  test_experiment.py  test_fma_functions.py  test_gaie_values_render.py  test_gateway_listener_port.py  test_generate_sbom.py  test_kustomize_hf_token.py  test_native_to_br0_2_1.py  test_node_selector_validation.py  test_normalize_router_block.py  test_planner_pin_sync.py  test_prometheus_adapter_pin_sync.py  test_readme_parser_skip.py  test_resolve_hf_token.py  test_results_store.py  test_router-values_render.py  test_shared_block_and_identity.py  test_smoketest_inference.py  test_smoketest_served_model.py  test_smoketest_wait_for_model.py  test_step_helpers.py  test_teardown_wva.py  test_version_resolver.py  test_vllm_openai_pin_sync.py  test_workload_monitoring_guards.py
tools/: add_variant.py
tutorials/: README.md
util/: debug_info_on_failure.sh  generate_sbom.py  precommit_render_changed.py  setup_precommit.sh
workload/: README.md
(+903 files in other folders)
