[project]
name = "llmdbenchmark"
version = "0.4.0"
description = "A library for configuration discovery and performance benchmarking for llm-d."
requires-python = ">=3.11"
dependencies = [
    "PyYAML",
    "Jinja2",
    "requests",
    "packaging",
    "kubernetes",
    "pykube-ng",
    "kubernetes-asyncio",
    "GitPython",

]

#
# When building llmdbenchmark, we will exclude anything not immmediately
# part of the library itself, which entails any templates or specification files.
# If we do not do this, we run the risk of setuptools prematurely thinking these
# are part of the overall distribution. 
#
[tool.setuptools.packages.find]
where = ["."]
include = ["llmdbenchmark*"]
exclude = ["templates*", "specification*"]

[project.urls]
Homepage = "https://llm-d.ai"
Repository = "https://github.com/llm-d/llm-d-benchmark"

[project.scripts]
llmdbenchmark = "llmdbenchmark.cli:cli"
