[project]
name = "llmdbenchmark"
version = "0.6.0"
description = "A library for configuration discovery and performance benchmarking for llm-d."
requires-python = ">=3.11"
dependencies = [
    "PyYAML",
    "Jinja2",
    "requests",
    "packaging",
    "kubernetes",
    "pykube-ng",
    "kubernetes-asyncio",
    "GitPython",
    "huggingface_hub",
    "transformers",
    "pydantic>=2.0",
    "google-auth",
    "google-cloud-storage>=2.10.0",
    # Schema types live in their own distribution so external benchmark
    # tooling can depend on just the schema. See ``llmdbenchmark-schema/``.
    "llmdbenchmark-schema",
]

#
# When building llmdbenchmark, we will exclude anything not immmediately
# part of the library itself, which entails any templates or specification files.
# If we do not do this, we run the risk of setuptools prematurely thinking these
# are part of the overall distribution. 
#

[tool.setuptools.packages.find]
where = ["."]
include = ["llmdbenchmark*"]
exclude = ["templates*", "specification*", "llmdbenchmark_schema*"]

[tool.setuptools.package-data]
"llmdbenchmark.analysis" = [
    "scripts/*.sh",
    "scripts/*.py",
]

[project.urls]
Homepage = "https://llm-d.ai"
Repository = "https://github.com/llm-d/llm-d-benchmark"

[project.scripts]
llmdbenchmark = "llmdbenchmark.cli:cli"
