[project]
name = "llmdbenchmark-schema"
version = "0.2.0"
description = "Benchmark Report (BR) schema types for llm-d-benchmark."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "PyYAML",
]
license = {text = "Apache-2.0"}
authors = [{name = "llm-d-benchmark contributors"}]
keywords = ["benchmarking", "llm", "schema", "llm-d"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/llm-d/llm-d-benchmark"
Source = "https://github.com/llm-d/llm-d-benchmark"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["llmdbenchmark_schema*"]

[tool.setuptools.package-data]
"llmdbenchmark_schema" = [
    "*.yaml",
    "*.json",
    "py.typed",
]
